# demo_project

./: README.md  mkdocs.yml  pyproject.toml
src/demo_project/: main.py
