[tool.poetry]
name = "demo_project"
version = "0.0.1"
description = "demo project description"
authors = ["idlewith <newellzhou@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/idlewith/demo_project"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
exclude = [
    "src/demo_project/.DS_Store",
    "src/demo_project/.mypy_cache",
    "src/demo_project/t.py",
]

[tool.poetry.dependencies]
python = ">=3.7, <4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dp = "demo_project.main:main"
